# Legal-Search-system

./: .env.example  .gitattributes  .gitignore  README.md  app.py  compile_flags.txt  main.py  requirements.txt
.resources/: data-pipeline.drawio  db_architecture.drawio  model-arc.drawio
app/: core.py  embedding.py  sample_input.json
configs/: app.yaml  database_config.yaml  pipeline_config.yaml  training_config.yaml
data/20260226/silver/: metadata.json
data/20260226/silver/document_jsons/: 100_2015_QH13.json  26_2023_QH15.json  31_2024_QH15.json  36_2024_QH15.json  41_2024_QH15.json  45_2019_QH14.json  48_2024_QH15.json  52_2014_QH13.json  59_2020_QH14.json  91_2015_QH13.json
database_engine/: CMakeLists.txt  Makefile  main.cpp
database_engine/include/: bm25.h  common.h  database.h  ingestion_manager.h  logging.h  searcher.h  storage.h  structure.h  test_framework.h  tokenizer.h  types.h
database_engine/src/: binding.cpp  bm25.cpp  common.cpp  database.cpp  ingestion_manager.cpp  logging.cpp  searcher.cpp  storage.cpp  tokenizer.cpp
database_engine/test/torch_jit/: load_model.cpp  model.jit  save_model.py
pipeline/: README.md  pipeline.py
pipeline/notebooks/: kernel-metadata.json  kernel-metadata.json.example  l5-train-model.ipynb
pipeline/scripts/: l5_train_model.sh
pipeline/src/pipeline/l0_init_storage/: __init__.py  init_storage.py
pipeline/src/pipeline/l2_processing/: processor.py
pipeline/src/pipeline/l3_clustering/: __init__.py  classes.py  (+2 more)
pipeline/src/utils/: code_utils.py  data_utils.py  kaggle_utils.py  kaggle_utils_v1.py
(+19 files in other folders)
